@@ -1,5 +1,7 @@
 2010-03-05  Akira TAGOH  <tagoh@redhat.com>
 
+	* data/Makefile.am: make xinputinfo.sh executable.
+
 	* configure.ac: Add x11 module check to avoid DSO issue.
 
 2010-02-16  Akira TAGOH  <tagoh@redhat.com>
